# harbor-cache

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROJECT_GOALS.md  README.md  SECURITY.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  security.yml
config/: default.toml  s3-minio.toml
crates/harbor-api/: Cargo.toml
crates/harbor-api/src/: error.rs  lib.rs  state.rs
crates/harbor-api/src/routes/: health.rs  management.rs  metrics.rs  mod.rs  registry.rs
crates/harbor-api/src/routes/management/: auth.rs  cache.rs  config.rs  logs.rs  mod.rs  types.rs  upstreams.rs  users.rs
crates/harbor-auth/: Cargo.toml
crates/harbor-auth/src/: error.rs  jwt.rs  lib.rs  middleware.rs  password.rs
crates/harbor-cache/: Cargo.toml
crates/harbor-cache/src/: config.rs  main.rs
crates/harbor-core/: Cargo.toml
crates/harbor-core/src/: config.rs  error.rs  lib.rs  registry.rs
crates/harbor-core/src/cache/: manager.rs  mod.rs  policy.rs
crates/harbor-core/src/upstream/: manager.rs  mod.rs  router.rs
crates/harbor-db/: Cargo.toml
crates/harbor-db/src/: error.rs  lib.rs  models.rs  repository.rs  utils.rs
crates/harbor-db/src/repository/: activity_logs.rs  cache.rs  config.rs  mod.rs  sessions.rs  upstreams.rs  users.rs
crates/harbor-proxy/: Cargo.toml
crates/harbor-proxy/src/: client.rs  error.rs  lib.rs
crates/harbor-storage/: Cargo.toml
crates/harbor-storage/src/: backend.rs  error.rs  lib.rs  local.rs  s3.rs
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  production-guide.md  troubleshooting.md  user-guide.md  web-ui-guide.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: CacheView.vue  ConfigView.vue  DashboardView.vue  LoginView.vue  LogsView.vue  UpstreamsView.vue  UsersView.vue
static/: index.html
static/assets/: ArrowPathIcon-CuEPsUyF.js  ArrowPathIcon-D7kk2pJo.js  ArrowPathIcon-DlvPnKNn.js  ArrowPathIcon-DtyxeBar.js  ArrowPathIcon-ZfxELW0L.js  ArrowPathIcon-oPnaH1Jj.js  CacheView-B9pEqOL6.js  CacheView-BYgmVAZe.js  CacheView-C-_PSO_P.js  CacheView-C15aL6so.js  CacheView-ClBOS0iS.js  CacheView-DW_8fqvm.js  ChevronRightIcon-s1Lh20XL.js  ClockIcon-BT5mRRqO.js  ClockIcon-CJmKLPaO.js  ClockIcon-CebI-t9p.js  ClockIcon-DSqtPU-8.js  ClockIcon-Khm4GSVT.js  ConfigView-2_wkchyi.js  ConfigView-BP7OQtNY.js  ConfigView-BV8a0-f2.js  ConfigView-Ct67RbDU.js  ConfigView-DniI6chU.js  ConfigView-DpL72Lg9.js  DashboardView-CI3LAY-L.js  DashboardView-CbRdxUEE.js  DashboardView-CfMzv989.js  DashboardView-DdorLtLq.js  DashboardView-HSvudYcN.js  DashboardView-ztTO4h7I.js  ExclamationTriangleIcon-7auQlHKi.js  ExclamationTriangleIcon-B-4XEbHW.js  ExclamationTriangleIcon-BM88Up9p.js  ExclamationTriangleIcon-DM2XedPL.js  ExclamationTriangleIcon-Kzuk6Szh.js  FunnelIcon-B_rgCtX7.js  FunnelIcon-Bdp7jOjF.js  FunnelIcon-Ci3IxpO0.js  FunnelIcon-DyKRZZnE.js  FunnelIcon-GoRXZVTl.js  (+43 more)
tests/: e2e-test.sh  setup-multiarch.sh
