[workspace]
resolver = "2"
members = [
    "crates/harbor-cache",
    "crates/harbor-core",
    "crates/harbor-storage",
    "crates/harbor-proxy",
    "crates/harbor-api",
    "crates/harbor-auth",
    "crates/harbor-db",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["Backend.AI Team"]
license = "MIT"
repository = "https://github.com/lablup/harbor-cache"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "charset", "http2", "macos-system-configuration"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Storage
object_store = { version = "0.11", features = ["aws"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# TLS
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2"
tokio-rustls = { version = "0.26", features = ["aws-lc-rs"] }

# HTTP server
hyper = { version = "1.5", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1.9"
futures = "0.3"
async-trait = "0.1"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Workspace crates
harbor-core = { path = "crates/harbor-core" }
harbor-storage = { path = "crates/harbor-storage" }
harbor-proxy = { path = "crates/harbor-proxy" }
harbor-api = { path = "crates/harbor-api" }
harbor-auth = { path = "crates/harbor-auth" }
harbor-db = { path = "crates/harbor-db" }
