[package]
name = "harbor-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
harbor-db.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
serde_json.workspace = true
